<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            style="@style/helpHeaderTextView"
            android:text="@string/help_add_sensor_title" />

        <TextView
            style="@style/helpContentTextView"
            android:text="@string/help_add_sensor_content" />

        <TextView
            style="@style/helpHeaderTextView"
            android:text="@string/help_delete_sensor_title" />

        <TextView
            style="@style/helpContentTextView"
            android:text="@string/help_delete_sensor_content" />

        <TextView
            style="@style/helpHeaderTextView"
            android:text="@string/help_edit_sensor_title" />

        <TextView
            style="@style/helpContentTextView"
            android:text="@string/help_edit_sensor_content" />

        <TextView
            style="@style/helpHeaderTextView"
            android:text="@string/help_pause_sensor_title" />

        <TextView
            style="@style/helpContentTextView"
            android:text="@string/help_pause_sensor_content" />

        <TextView
            style="@style/helpHeaderTextView"
            android:text="@string/help_show_measurements_title" />

        <TextView
            style="@style/helpContentTextView"
            android:text="@string/help_show_measurements_content" />

        <TextView
            style="@style/helpHeaderTextView"
            android:text="@string/help_export_sensors_title" />

        <TextView
            style="@style/helpContentTextView"
            android:text="@string/help_export_sensors_content" />
    </LinearLayout>

</ScrollView>