<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/menu_measurements_activity_refresh"
        android:icon="@drawable/navigation_refresh"
        android:orderInCategory="100"
        android:showAsAction="always"
        android:title="@string/menu_refresh"/>
    <item
        android:id="@+id/menu_measurements_activity_edit_mode"
        android:icon="@drawable/content_edit"
        android:orderInCategory="200"
        android:showAsAction="always"
        android:title="@string/menu_edit"/>
    <item
        android:id="@+id/menu_measurements_activity_export"
        android:icon="@drawable/av_download"
        android:orderInCategory="300"
        android:showAsAction="ifRoom"
        android:title="@string/menu_export"/>
    <item
        android:id="@+id/menu_measurements_activity_upload"
        android:icon="@drawable/av_upload"
        android:orderInCategory="400"
        android:showAsAction="ifRoom"
        android:title="@string/menu_upload"/>
    <item
        android:id="@+id/menu_measurements_activity_settings"
        android:icon="@drawable/action_settings"
        android:orderInCategory="500"
        android:showAsAction="ifRoom"
        android:title="@string/menu_settings"/>
    
    <item
        android:id="@+id/menu_measurements_activity_help"
        android:orderInCategory="600"
        android:showAsAction="never"
        android:title="@string/menu_help"/>

</menu>