<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/menu_main_activity_add_sensor"
        android:icon="@drawable/content_new"
        android:orderInCategory="100"
        android:showAsAction="always"
        android:title="@string/menu_add_sensor"/>
    <item
        android:id="@+id/menu_main_activity_edit_mode"
        android:icon="@drawable/content_edit"
        android:orderInCategory="200"
        android:showAsAction="always"
        android:title="@string/menu_edit"/>
    <item
        android:id="@+id/menu_main_activity_export"
        android:icon="@drawable/av_download"
        android:orderInCategory="300"
        android:showAsAction="ifRoom"
        android:title="@string/menu_export"/>
    <item
        android:id="@+id/menu_main_activity_settings"
        android:icon="@drawable/action_settings"
        android:orderInCategory="400"
        android:showAsAction="ifRoom"
        android:title="@string/menu_settings"/>
    <item
        android:id="@+id/menu_main_activity_help"
        android:orderInCategory="500"
        android:showAsAction="never"
        android:title="@string/menu_help"/>

</menu>