<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            style="@style/sectionHeaderTextView"
            android:text="@string/section_name" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2" >

            <EditText
                android:id="@+id/sensorNameEditText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="6dp"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/sensor_name"
                android:imeOptions="flagNoExtractUi"
                android:singleLine="true" />

            <EditText
                android:id="@+id/sensorPinEditText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="6dp"
                android:layout_weight="1"
                android:digits="0123456789"
                android:ems="10"
                android:hint="@string/sensor_pin"
                android:imeOptions="flagNoExtractUi"
                android:inputType="number"
                android:singleLine="true" />
        </LinearLayout>

        <TextView
            style="@style/sectionHeaderTextView"
            android:text="@string/section_freq" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2" >

            <EditText
                android:id="@+id/sensorFreqEditText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="6dp"
                android:layout_weight="1"
                android:digits="0123456789"
                android:ems="10"
                android:hint="@string/sensor_freq"
                android:imeOptions="flagNoExtractUi"
                android:inputType="number"
                android:singleLine="true" />

            <Spinner
                android:id="@+id/timeUnitSpinner"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="6dp"
                android:layout_weight="1" />
        </LinearLayout>

        <TextView
            style="@style/sectionHeaderTextView"
            android:text="@string/section_input" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2" >

            <Spinner
                android:id="@+id/inputTypeSpinner"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="6dp"
                android:layout_weight="1" />

            <Spinner
                android:id="@+id/measurementTypeSpinner"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="6dp"
                android:layout_weight="1" />
        </LinearLayout>

        <TextView
            style="@style/sectionHeaderTextView"
            android:text="@string/section_threshold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2" >

            <EditText
                android:id="@+id/thresholdEditText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="6dp"
                android:layout_weight="1"
                android:digits=".0123456789"
                android:ems="10"
                android:hint="@string/sensor_threshold"
                android:imeOptions="flagNoExtractUi"
                android:inputType="number"
                android:singleLine="true" />

            <Spinner
                android:id="@+id/thresholdTypeSpinner"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="6dp"
                android:layout_weight="1" />
        </LinearLayout>

        <TextView
            style="@style/sectionHeaderTextView"
            android:text="@string/section_xively" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2" >

            <Switch
                android:id="@+id/xivelySwitch"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/sensor_xively"
                android:onClick="onXivelySwitchClicked"
                android:paddingLeft="18dp"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/datastreamEditText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="6dp"
                android:layout_weight="1"
                android:ems="10"
                android:enabled="false"
                android:hint="@string/sensor_datastream"
                android:imeOptions="flagNoExtractUi"
                android:singleLine="true"
                android:textColorHint="@color/hint_lighter_gray" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>