<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignParentLeft="true"
    android:orientation="vertical"
    android:paddingBottom="6dp"
    android:paddingLeft="6dp"
    android:paddingTop="4dp" >

    <TextView
        android:id="@+id/measuredValueTV"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:paddingLeft="6dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@android:color/black"
        android:textStyle="bold|italic" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="2dp"
        android:paddingLeft="2dp"
        android:paddingTop="2dp" >

        <TextView
            style="@style/listItemTextViewSecondary"
            android:text="@string/textview_uploaded" />

        <TextView
            android:id="@+id/uploadedStatusTV"
            style="@style/listItemTextViewTertiary" />

        <TextView
            style="@style/listItemTextViewSecondary"
            android:text="@string/textview_measurement_id" />

        <TextView
            android:id="@+id/countTV"
            style="@style/listItemTextViewTertiary" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="2dp" >

        <TextView
            style="@style/listItemTextViewSecondary"
            android:text="@string/textview_timestamp" />

        <TextView
            android:id="@+id/timestampTV"
            style="@style/listItemTextViewTertiary" />
    </LinearLayout>

</LinearLayout>